--- a/client_admin/src/containers/Products/style.css
+++ b/client_admin/src/containers/Products/style.css
@@ -18,7 +18,7 @@
 
 .productImgContainer img{
     max-width: 100%;
-    max-width: 100%;
+    max-height: 100%;
     object-fit: contain;
     margin: 4px;
 }
